--- a/finalassasement.html
+++ b/finalassasement.html
@@ -6,7 +6,8 @@
 </head>
 <style>
 h2 {
-      background-color: white;
+      font: 1em sans-serif;
+      background-color: red;
       text-align: center;
 }
     
