--- a/finalassasement.html
+++ b/finalassasement.html
@@ -7,7 +7,7 @@
 <style>
 h2 {
       font: 1em sans-serif;
-      background-color: red;
+      background-color: blue;
       text-align: center;
 }
     
